fixed z-index icon

--- a/src/apps/static/css/style.css
+++ b/src/apps/static/css/style.css
@@ -882,7 +882,6 @@ body {
     width: 20px;
     top: 10px;
     right: 5px;
-    z-index: 10;
     display: flex;
     flex-direction: column;
     justify-content: center;
